--- a/style.css
+++ b/style.css
@@ -114,6 +114,14 @@ a{
     width: 100%;
     text-align: center;
     color: white;
+    position: relative;
 }
+#car{
+    width: 18%;
+    height: 18%;
+    position: absolute;
+    top:60%;
+    left:92%;
 
+}
 
